--- a/Project/pom.xml
+++ b/Project/pom.xml
@@ -64,6 +64,13 @@
 			<version>3.1.4</version> <!-- Use the latest version -->
 		</dependency>
 		
+
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongodb-driver-sync</artifactId>
+		</dependency>
+
+		
 	</dependencies>
 
 	<build>
