added a session token cookie and prevented unauthorized access to dashboard without logging in. Still need to prevent access to  the 5 other pages behind this

--- a/Project/pom.xml
+++ b/Project/pom.xml
@@ -70,6 +70,11 @@
 			<artifactId>mongodb-driver-sync</artifactId>
 		</dependency>
 
+		<dependency>
+		    <groupId>org.springframework.session</groupId>
+		    <artifactId>spring-session-core</artifactId>
+		</dependency>
+
 		
 	</dependencies>
 
